# experiments-datafusion

./: Cargo.toml  README.md  runall.sh
src/: data.rs  lib.rs  main.rs
