[package]
name = "bench-arrow-sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.8"
datafusion = "19.0.0"
tokio = "1.26.0"
rand_distr = "0.4.3"
hex = "0.4.3"
lazy_static = "1.4.0"
rand = "0.8.5"
