[package]
name = "inspect-arrow-sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
datafusion = "19.0.0"
tokio = "1.26.0"
hex = "0.4.3"
lazy_static = "1.4.0"
rand = "0.8.5"
plotters = "0.3.4"
